--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,6 @@
 @import 'header.scss';
 @import 'main.scss';
+@import 'about';
 @import 'headline.scss';
 @import 'footer.scss';
 @import 'common.scss';
