--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,30 @@
   flex-grow: 1;
 }
 
+.about {
+  padding: 76px 0;
+  background-color: #f4f5f7;
+}
+.about__wrapper {
+  display: flex;
+}
+.about__title {
+  margin: 0;
+  margin-bottom: 8px;
+  font-size: 22px;
+}
+.about__article {
+  flex-basis: 555px;
+  font-size: 22px;
+  line-height: 32px;
+}
+.about__article:not(:last-child) {
+  margin-right: 29px;
+}
+.about__text {
+  margin: 0;
+}
+
 .active-button {
   width: 160px;
   height: 48px;
@@ -116,21 +140,22 @@
   height: 165px;
   font-size: 80px;
   line-height: 78px;
-  letter-spacing: -0.5px;
+  letter-spacing: -1px;
+  margin-bottom: 32px;
 }
 .headline__description {
   width: 464px;
   height: 102px;
   font-size: 24px;
   line-height: 34px;
-  margin-bottom: 58px;
+  margin-bottom: 60px;
 }
 .headline__active-button {
-  margin-right: 10px;
+  margin-right: 4px;
 }
 .headline__banner {
   position: relative;
-  top: 5px;
+  top: 7px;
   right: -105px;
   margin-left: auto;
   width: 796px;
