--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,5 +1,6 @@
 .about {
-  padding: 76px 0;
+  padding-top: 77px;
+  padding-bottom: 76px;
   background-color: #f4f5f7;
   &__wrapper {
     display: flex;
