--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,6 +4,8 @@
 @import 'headline.scss';
 @import 'footer.scss';
 @import 'common.scss';
+@import 'customers.scss';
+
 * {
   box-sizing: border-box;
 }
