--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,8 @@
 }
 
 .about {
-  padding: 76px 0;
+  padding-top: 77px;
+  padding-bottom: 76px;
   background-color: #f4f5f7;
 }
 .about__wrapper {
@@ -127,7 +128,8 @@
 }
 
 .headline__wrapper {
-  padding: 77px 0;
+  padding-top: 77px;
+  padding-bottom: 77px;
 }
 .headline__content {
   position: absolute;
@@ -276,6 +278,22 @@
   font-weight: 700;
   line-height: 13px;
   cursor: pointer;
+}
+
+.customers {
+  padding-top: 30px;
+  padding-bottom: 106px;
+}
+.customers__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.customers__logo {
+  filter: brightness(0);
 }
 
 * {
