--- a/styles/common.scss
+++ b/styles/common.scss
@@ -12,7 +12,7 @@
 
 .learn-more-button {
   background-color: #fff;
-  color: $bc-color-accent;
+  color: $bc-color-darkblue;
   padding: 14px 28px;
   font-weight: 700;
   line-height: 13px;
