--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   color: #fff;
   font-size: 18px;
   font-weight: 700;
-  background-color: #3040c4;
+  background-color: #3141c5;
   border-radius: 2px;
   cursor: pointer;
 }
@@ -107,7 +107,7 @@
   color: #fff;
   font-size: 18px;
   font-weight: 700;
-  background-color: #3040c4;
+  background-color: #3141c5;
   border-radius: 2px;
   cursor: pointer;
 }
@@ -150,16 +150,12 @@
   margin-right: 4px;
 }
 .headline__banner {
+  display: block;
   position: relative;
   top: 7px;
   right: -105px;
   margin-left: auto;
-  width: 796px;
-  height: 448px;
-  background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  max-width: 100%;
 }
 
 .footer {
@@ -178,7 +174,7 @@
   line-height: 26px;
 }
 .footer__line {
-  border: 1px solid rgb(43, 41, 45);
+  border: 1px solid #2b292d;
   opacity: 0.1;
 }
 .footer__links {
@@ -260,7 +256,7 @@
   color: #fff;
   font-size: 18px;
   font-weight: 700;
-  background-color: #3040c4;
+  background-color: #3141c5;
   border-radius: 2px;
   cursor: pointer;
 }
@@ -302,18 +298,6 @@
   width: 167px;
   height: 167px;
   background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hidden-ouch.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-}
-.features::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: -193px;
-  width: 1086px;
-  height: 597px;
-  background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/invision-screen.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -414,6 +398,102 @@
   background-size: cover;
   background-position: center;
 }
+.features__banner {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.inbox {
+  background-color: #fcf0e3;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.inbox__inner {
+  display: flex;
+}
+.inbox__img {
+  max-width: 100%;
+  flex-basis: 425px;
+  flex-grow: 1;
+  margin-right: 161px;
+}
+.inbox__img-decor {
+  margin-bottom: 15px;
+}
+.inbox__img-caption {
+  text-align: right;
+}
+.inbox__content {
+  flex-basis: 519px;
+  flex-grow: 1;
+}
+.inbox__subtitle {
+  margin: 0;
+  margin-bottom: 24px;
+  padding-left: 30px;
+  padding-right: 30px;
+  color: #f1592b;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 34px;
+}
+.inbox__title {
+  margin: 0;
+  margin-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -0.5px;
+}
+.inbox__text {
+  padding-left: 30px;
+  max-width: 500px;
+  margin-bottom: 44px;
+  font-size: 24px;
+  line-height: 34px;
+}
+.inbox__card {
+  background-color: #fff;
+  padding: 30px;
+}
+
+.blockquote {
+  margin: 0;
+  font-size: 20px;
+  line-height: 28px;
+  margin-bottom: 26px;
+}
+
+.cite-inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  font-size: 16px;
+  line-height: 22px;
+  padding-left: 54px;
+}
+.cite-inner::before {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 0;
+  left: 0;
+  background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-avatar.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.cite-inner__author {
+  font-weight: 700;
+}
+.cite-inner__position {
+  color: rgba(43, 41, 45, 0.6);
+}
 
 * {
   box-sizing: border-box;
@@ -422,11 +502,11 @@
 body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   font-size: 18px;
   font-family: "Work Sans", sans-serif;
   font-weight: 400;
-  color: rgb(43, 41, 45);
+  color: #2b292d;
   background-color: #fff;
 }
 
@@ -437,7 +517,7 @@ body {
 }
 
 a {
-  color: rgb(43, 41, 45);
+  color: #2b292d;
   text-decoration: none;
   cursor: pointer;
 }
