--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -36,15 +36,11 @@
   }
 
   &__banner {
+    display: block;
     position: relative;
     top: 7px;
     right: -105px;
     margin-left: auto;
-    width: 796px;
-    height: 448px;
-    background-image: url('https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    max-width: 100%;
   }
 }
