--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,3 +1,9 @@
-$text-color-primary: rgba(43, 41, 45, 1);
-$text-color-secondary: rgba(43, 41, 45, 0.6);
-$bc-color-accent: #3040c4;
+$text-color-primary: #2b292d;
+$text-color-secondary: #2b292d99;
+$text-color-orange: #f1592b;
+$text-color-green: #009b4d;
+
+$bc-color-accent: #3141c5;
+$bc-color-darkblue: #3040c4;
+$bc-color-beige: #fcf0e3;
+$bc-color-white: #fff;
