--- a/styles.css
+++ b/styles.css
@@ -495,6 +495,74 @@
   color: rgba(43, 41, 45, 0.6);
 }
 
+.communication {
+  padding-top: 110px;
+  padding-bottom: 110px;
+}
+.communication__inner {
+  display: flex;
+  flex-direction: column;
+}
+.communication__top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+.communication__content {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 462px;
+}
+.communication__subtitle {
+  margin: 0;
+  margin-bottom: 24px;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 34px;
+  color: #0189d1;
+}
+.communication__title {
+  margin: 0;
+  margin-bottom: 30px;
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -0.5px;
+}
+.communication__top-text {
+  margin: 0;
+  margin-bottom: 39px;
+  font-size: 24px;
+  line-height: 34px;
+}
+.communication__button {
+  margin-bottom: 87px;
+}
+.communication__decor-line {
+  border: 1px solid rgba(0, 0, 0, 0.1019607843);
+  max-width: 150px;
+}
+.communication__img {
+  margin-bottom: 15px;
+}
+.communication__img-capture {
+  text-align: center;
+  color: rgba(43, 41, 45, 0.6);
+}
+.communication__bottom {
+  display: flex;
+}
+.communication__item {
+  flex-basis: 33.3%;
+}
+.communication__item:not(:last-child) {
+  margin-right: 30px;
+}
+.communication__item-link {
+  color: #3040c4;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
 * {
   box-sizing: border-box;
 }
