--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,6 +7,7 @@
 @import 'customers.scss';
 @import 'features.scss';
 @import 'inbox.scss';
+@import 'communication.scss';
 
 * {
   box-sizing: border-box;
