--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,6 +2,8 @@ $text-color-primary: #2b292d;
 $text-color-secondary: #2b292d99;
 $text-color-orange: #f1592b;
 $text-color-green: #009b4d;
+$text-color-lightblue: #0189d1;
+$text-color-darkblue: #3040c4;
 
 $bc-color-accent: #3141c5;
 $bc-color-darkblue: #3040c4;
