--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,38 @@
   font-weight: 700;
   background-color: #3141c5;
   border-radius: 2px;
+  box-shadow: none;
+  transition: transform 0.5s;
   cursor: pointer;
+}
+.active-button:hover {
+  transform: scale(1.05);
+}
+.active-button:active {
+  color: #f5c651;
+}
+.active-button:focus {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .learn-more-button {
+  display: inline-block;
   background-color: #fff;
   color: #3040c4;
-  padding: 14px 28px;
+  padding: 17px 28px;
   font-weight: 700;
   line-height: 13px;
+  transition: transform 0.5s;
   cursor: pointer;
+}
+.learn-more-button:hover {
+  transform: scale(1.05);
+}
+.learn-more-button:active {
+  color: #ed526d;
+}
+.learn-more-button:focus {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .header {
@@ -109,16 +131,38 @@
   font-weight: 700;
   background-color: #3141c5;
   border-radius: 2px;
+  box-shadow: none;
+  transition: transform 0.5s;
   cursor: pointer;
+}
+.active-button:hover {
+  transform: scale(1.05);
+}
+.active-button:active {
+  color: #f5c651;
+}
+.active-button:focus {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .learn-more-button {
+  display: inline-block;
   background-color: #fff;
   color: #3040c4;
-  padding: 14px 28px;
+  padding: 17px 28px;
   font-weight: 700;
   line-height: 13px;
+  transition: transform 0.5s;
   cursor: pointer;
+}
+.learn-more-button:hover {
+  transform: scale(1.05);
+}
+.learn-more-button:active {
+  color: #ed526d;
+}
+.learn-more-button:focus {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .headline__wrapper {
@@ -258,16 +302,38 @@
   font-weight: 700;
   background-color: #3141c5;
   border-radius: 2px;
+  box-shadow: none;
+  transition: transform 0.5s;
   cursor: pointer;
+}
+.active-button:hover {
+  transform: scale(1.05);
+}
+.active-button:active {
+  color: #f5c651;
+}
+.active-button:focus {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .learn-more-button {
+  display: inline-block;
   background-color: #fff;
   color: #3040c4;
-  padding: 14px 28px;
+  padding: 17px 28px;
   font-weight: 700;
   line-height: 13px;
+  transition: transform 0.5s;
   cursor: pointer;
+}
+.learn-more-button:hover {
+  transform: scale(1.05);
+}
+.learn-more-button:active {
+  color: #ed526d;
+}
+.learn-more-button:focus {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .customers {
@@ -563,6 +629,67 @@
   text-decoration: underline;
 }
 
+.audience {
+  padding-top: 110px;
+  padding-bottom: 110px;
+  background-color: rgba(0, 161, 198, 0.137254902);
+}
+.audience__top {
+  margin: 0 auto;
+  max-width: 555px;
+  text-align: center;
+  margin-bottom: 111px;
+}
+.audience__subtitle {
+  margin: 0;
+  margin-bottom: 24px;
+  font-size: 22px;
+  line-height: 34px;
+}
+.audience__title {
+  margin: 0;
+  margin-bottom: 30px;
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -0.5px;
+}
+.audience__text {
+  margin: 0;
+  margin-bottom: 34px;
+  font-size: 24px;
+  line-height: 34px;
+}
+.audience__bottom {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+.audience__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 262px;
+  height: 300px;
+  background-color: #fff;
+  border-radius: 8px;
+  transition: background-color 0.5s;
+  cursor: pointer;
+}
+.audience__item:hover {
+  background-color: #3141c5;
+}
+.audience__img-capture {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 28px;
+}
+
+.audience-button {
+  margin-right: 10px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -587,7 +714,11 @@ body {
 a {
   color: #2b292d;
   text-decoration: none;
+  transition: color 0.5s;
   cursor: pointer;
+}
+a:hover {
+  color: #3040c4;
 }
 
 /*# sourceMappingURL=styles.css.map */
