--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -4,8 +4,12 @@ $text-color-orange: #f1592b;
 $text-color-green: #009b4d;
 $text-color-lightblue: #0189d1;
 $text-color-darkblue: #3040c4;
+$text-color-active-btn: #f5c651;
+$text-color-active-learbtn: #ed526d;
+$text-color-hover-link: #3040c4;
 
 $bc-color-accent: #3141c5;
 $bc-color-darkblue: #3040c4;
+$bc-color-lightskyblue: #00a1c623;
 $bc-color-beige: #fcf0e3;
 $bc-color-white: #fff;
