--- a/styles/customers.scss
+++ b/styles/customers.scss
@@ -1,6 +1,10 @@
 .customers {
   padding-top: 30px;
   padding-bottom: 106px;
+  &_feedback {
+    padding-top: 43px;
+    padding-bottom: 76px;
+  }
   &__list {
     display: flex;
     justify-content: space-between;
