--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,10 @@
   padding-top: 30px;
   padding-bottom: 106px;
 }
+.customers_feedback {
+  padding-top: 43px;
+  padding-bottom: 76px;
+}
 .customers__list {
   display: flex;
   justify-content: space-between;
@@ -688,6 +692,87 @@
 
 .audience-button {
   margin-right: 10px;
+}
+
+.feedback {
+  position: relative;
+  padding-bottom: 104px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1019607843);
+}
+.feedback__subtitle {
+  margin: 0;
+  margin-bottom: 28px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  color: #3141c5;
+}
+.feedback__decor-img {
+  position: absolute;
+  display: block;
+  bottom: 0;
+  right: 0;
+}
+
+.feedback-slider {
+  max-width: 750px;
+  margin: auto;
+}
+.feedback-slider__item {
+  text-align: center;
+}
+.feedback-slider__item-author {
+  font-weight: 700;
+}
+.feedback-slider__item-position {
+  color: rgba(43, 41, 45, 0.6);
+}
+.feedback-slider .slick-dots {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.feedback-slider .slick-dots button {
+  width: 8px;
+  height: 10px;
+  font-size: 0;
+  border: 0;
+  border-radius: 50%;
+  transition: transform 0.5s;
+  cursor: pointer;
+}
+.feedback-slider .slick-dots button:hover {
+  transform: scale(1.3);
+}
+.feedback-slider .slick-dots li {
+  display: flex;
+  margin-right: 13px;
+}
+.feedback-slider .slick-dots .slick-active button {
+  background-color: #3141c5;
+}
+
+.blockquote-feedback {
+  font-size: 24px;
+  line-height: 34px;
+  margin-bottom: 34px;
+}
+
+.cite-inner-feedback {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 * {
