--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,6 +9,7 @@
 @import 'inbox.scss';
 @import 'communication.scss';
 @import 'audience.scss';
+@import 'feedback.scss';
 
 * {
   box-sizing: border-box;
