--- a/styles.css
+++ b/styles.css
@@ -741,8 +741,7 @@
   list-style-type: none;
 }
 .feedback-slider .slick-dots button {
-  width: 8px;
-  height: 10px;
+  padding: 4px;
   font-size: 0;
   border: 0;
   border-radius: 50%;
