--- a/styles/feedback.scss
+++ b/styles/feedback.scss
@@ -48,8 +48,7 @@
     padding: 0;
     list-style-type: none;
     button {
-      width: 8px;
-      height: 10px;
+      padding: 4px;
       font-size: 0;
       border: 0;
       border-radius: 50%;
