--- a/styles/common.scss
+++ b/styles/common.scss
@@ -29,6 +29,7 @@
   padding: 17px 28px;
   font-weight: 700;
   line-height: 13px;
+  border-radius: 2px;
   transition: transform 0.5s;
   cursor: pointer;
   &:hover {
