--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,4 @@
+@import 'global.scss';
 @import 'header.scss';
 @import 'main.scss';
 @import 'about';
@@ -10,10 +11,8 @@
 @import 'communication.scss';
 @import 'audience.scss';
 @import 'feedback.scss';
+@import 'hiring.scss';
 
-* {
-  box-sizing: border-box;
-}
 body {
   display: flex;
   flex-direction: column;
@@ -29,14 +28,4 @@ body {
   max-width: 1160px;
   padding: 0 10px;
   margin: 0 auto;
-}
-
-a {
-  color: $text-color-primary;
-  text-decoration: none;
-  transition: color 0.5s;
-  cursor: pointer;
-  &:hover {
-    color: $text-color-hover-link;
-  }
 }
