--- a/styles/hiring.scss
+++ b/styles/hiring.scss
@@ -63,7 +63,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 26px;
-    border: 1px solid #2b292d3b;
+    border: 1px solid $border-color;
     border-radius: 8px;
     cursor: pointer;
     transition: all 0.2s;
