--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -14,6 +14,9 @@ $bc-color-darkblue: #3040c4;
 $bc-color-lightskyblue: #00a1c623;
 $bc-color-beige: #fcf0e3;
 $bc-color-white: #fff;
+$bc-color-grey: #f4f5f7;
+
+$border-color: #2b292d3b;
 
 $maxWidth: 1400;
 @mixin adaptiv-font($pcSize, $mobSize) {
