--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -31,7 +31,7 @@
 
 .about__company {
   flex-basis: 33%;
-  margin-right: 111px;
+  margin-right: 110px;
 }
 
 .downloads {
@@ -62,7 +62,8 @@
 
 .nav-links {
   &__title {
-    margin-bottom: 18px;
+    margin-bottom: 20px;
+    padding-top: 23px;
   }
   &__list {
     margin: 0;
