--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -17,11 +17,11 @@
   }
 
   &__title {
-    margin-top: 0;
+    margin-top: -2px;
     width: 754px;
     height: 165px;
     letter-spacing: -1px;
-    margin-bottom: 32px;
+    margin-bottom: 33px;
   }
 
   &__description {
