--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,20 @@ button {
   cursor: pointer;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .active-button {
   width: 160px;
   height: 48px;
@@ -101,9 +115,9 @@ button {
   align-items: center;
 }
 .logo__img {
-  width: 60px;
+  width: 66px;
   height: 60px;
-  margin-right: 15px;
+  margin-right: 9px;
 }
 .logo__name {
   font-size: 20px;
@@ -151,8 +165,7 @@ button {
   display: flex;
 }
 .about__title {
-  margin: 0;
-  margin-bottom: 8px;
+  margin-bottom: 11px;
   font-size: 22px;
 }
 .about__article {
@@ -162,9 +175,6 @@ button {
 }
 .about__article:not(:last-child) {
   margin-right: 29px;
-}
-.about__text {
-  margin: 0;
 }
 
 .active-button {
@@ -226,11 +236,11 @@ button {
   z-index: 1;
 }
 .headline__title {
-  margin-top: 0;
+  margin-top: -2px;
   width: 754px;
   height: 165px;
   letter-spacing: -1px;
-  margin-bottom: 32px;
+  margin-bottom: 33px;
 }
 .headline__description {
   width: 464px;
@@ -279,7 +289,7 @@ button {
 
 .about__company {
   flex-basis: 33%;
-  margin-right: 111px;
+  margin-right: 110px;
 }
 
 .downloads {
@@ -308,7 +318,8 @@ button {
 }
 
 .nav-links__title {
-  margin-bottom: 18px;
+  margin-bottom: 20px;
+  padding-top: 23px;
 }
 .nav-links__list {
   margin: 0;
@@ -432,19 +443,17 @@ button {
   color: #009b4d;
 }
 .features__title {
-  margin: 0;
   margin-bottom: 30px;
   letter-spacing: -0.5px;
 }
 .features__description {
-  margin: 0;
   margin-bottom: 42px;
   font-size: 24px;
   line-height: 34px;
 }
 .features__advantage {
   border-bottom: 3px solid #3142c6;
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 .features__subtitle-aquire {
   position: relative;
@@ -471,7 +480,7 @@ button {
   padding: 0;
   line-height: 26px;
   margin-bottom: 20px;
-  margin-top: 7px;
+  margin-top: 8px;
 }
 .features__item {
   font-weight: 700;
@@ -482,7 +491,7 @@ button {
   position: relative;
   padding-left: 38px;
   padding-bottom: 21px;
-  margin-bottom: 21px;
+  margin-bottom: 25px;
   border-bottom: 1px solid rgba(43, 41, 45, 0.1490196078);
 }
 .features__item_building::before {
@@ -524,8 +533,8 @@ button {
 
 .inbox {
   background-color: #fcf0e3;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 113px;
+  padding-bottom: 84px;
 }
 .inbox__inner {
   display: flex;
@@ -534,20 +543,21 @@ button {
   max-width: 100%;
   flex-basis: 425px;
   flex-grow: 1;
-  margin-right: 161px;
+  margin-right: 163px;
 }
 .inbox__img-decor {
-  margin-bottom: 15px;
+  margin-bottom: 18px;
 }
 .inbox__img-caption {
-  text-align: right;
+  text-align: center;
+  font-size: 14px;
+  line-height: 22px;
 }
 .inbox__content {
   flex-basis: 519px;
   flex-grow: 1;
 }
 .inbox__subtitle {
-  margin: 0;
   margin-bottom: 24px;
   padding-left: 30px;
   padding-right: 30px;
@@ -557,7 +567,6 @@ button {
   line-height: 34px;
 }
 .inbox__title {
-  margin: 0;
   margin-bottom: 30px;
   padding-left: 30px;
   padding-right: 30px;
@@ -572,7 +581,7 @@ button {
 }
 .inbox__card {
   background-color: #fff;
-  padding: 30px;
+  padding: 29px;
 }
 
 .blockquote {
@@ -621,15 +630,17 @@ button {
 .communication__top {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 5px;
+  margin-bottom: 43px;
 }
 .communication__content {
   display: flex;
   flex-direction: column;
   flex-basis: 462px;
 }
+.communication__decor {
+  margin-right: 62px;
+}
 .communication__subtitle {
-  margin: 0;
   margin-bottom: 24px;
   font-weight: 700;
   font-size: 22px;
@@ -637,12 +648,10 @@ button {
   color: #0189d1;
 }
 .communication__title {
-  margin: 0;
   margin-bottom: 30px;
   letter-spacing: -0.5px;
 }
 .communication__top-text {
-  margin: 0;
   margin-bottom: 39px;
   font-size: 24px;
   line-height: 34px;
@@ -654,12 +663,11 @@ button {
   border: 1px solid rgba(0, 0, 0, 0.1019607843);
   max-width: 150px;
 }
-.communication__img {
-  margin-bottom: 15px;
-}
 .communication__img-capture {
   text-align: center;
   color: rgba(43, 41, 45, 0.6);
+  font-size: 14px;
+  line-height: 22px;
 }
 .communication__bottom {
   display: flex;
@@ -669,6 +677,10 @@ button {
 }
 .communication__item:not(:last-child) {
   margin-right: 30px;
+}
+.communication__item-text {
+  margin-bottom: 5px;
+  line-height: 26px;
 }
 .communication__item-link {
   color: #3040c4;
@@ -688,18 +700,15 @@ button {
   margin-bottom: 111px;
 }
 .audience__subtitle {
-  margin: 0;
   margin-bottom: 24px;
   font-size: 22px;
   line-height: 34px;
 }
 .audience__title {
-  margin: 0;
   margin-bottom: 30px;
   letter-spacing: -0.5px;
 }
 .audience__text {
-  margin: 0;
   margin-bottom: 34px;
   font-size: 24px;
   line-height: 34px;
@@ -725,6 +734,9 @@ button {
 .audience__item:hover {
   background-color: #3141c5;
 }
+.audience__img {
+  padding-bottom: 16px;
+}
 .audience__img-capture {
   font-weight: 700;
   font-size: 22px;
@@ -741,7 +753,6 @@ button {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1019607843);
 }
 .feedback__subtitle {
-  margin: 0;
   margin-bottom: 28px;
   text-align: center;
   font-weight: 700;
@@ -771,9 +782,9 @@ button {
 }
 .feedback-slider .slick-dots {
   position: absolute;
-  left: 0;
+  left: 13px;
   right: 0;
-  bottom: -38px;
+  bottom: -47px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -831,12 +842,11 @@ button {
   max-width: 555px;
 }
 .hiring__title {
-  margin: 0;
   margin-bottom: 20px;
 }
 .hiring__about-text {
-  margin: 0;
-  margin-bottom: 28px;
+  margin-bottom: 38px;
+  padding-top: 3px;
   font-size: 24px;
   line-height: 34px;
 }
@@ -878,7 +888,7 @@ button {
   transition: all 0.2s;
 }
 .vacancy-block__item:not(:last-child) {
-  margin-bottom: 20px;
+  margin-bottom: 17px;
 }
 .vacancy-block__item:hover {
   background-color: #3141c5;
@@ -889,6 +899,10 @@ button {
 }
 .vacancy-block__item:hover .vacancy-block__text {
   color: #fff;
+}
+.vacancy-block__title {
+  font-size: 22px;
+  line-height: 28px;
 }
 .vacancy-block__text {
   margin-left: auto;
@@ -920,12 +934,14 @@ button {
 
 .order-form {
   flex-basis: 550px;
+  margin-left: -85px;
 }
 .order-form__title {
-  margin-bottom: 12px;
+  margin-bottom: 19px;
   font-weight: 700;
   font-size: 40px;
   line-height: 40px;
+  letter-spacing: -0.25px;
 }
 .order-form__text {
   margin-bottom: 26px;
@@ -945,6 +961,9 @@ button {
   margin-right: 10px;
   border: 1px solid rgba(43, 41, 45, 0.231372549);
 }
+.order-form__input::placeholder {
+  color: #2b292d;
+}
 .order-form__terms-description {
   font-size: 14px;
   line-height: 22px;
@@ -955,9 +974,6 @@ button {
   line-height: 22px;
   text-decoration: underline;
   color: #3141c5;
-}
-.order-form__terms-caption {
-  display: flex;
 }
 
 body {
