--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -3,26 +3,25 @@
   padding-top: 110px;
   padding-bottom: 110px;
   background-color: $bc-color-lightskyblue;
+
   &__top {
     margin: 0 auto;
     max-width: 555px;
     text-align: center;
     margin-bottom: 111px;
   }
+
   &__subtitle {
-    margin: 0;
     margin-bottom: 24px;
     font-size: 22px;
     line-height: 34px;
   }
 
   &__title {
-    margin: 0;
     margin-bottom: 30px;
     letter-spacing: -0.5px;
   }
   &__text {
-    margin: 0;
     margin-bottom: 34px;
     font-size: 24px;
     line-height: 34px;
@@ -49,6 +48,10 @@
     &:hover {
       background-color: $bc-color-accent;
     }
+  }
+
+  &__img {
+    padding-bottom: 16px;
   }
 
   &__img-capture {
