--- a/styles/communication.scss
+++ b/styles/communication.scss
@@ -11,7 +11,7 @@
   &__top {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 5px;
+    margin-bottom: 43px;
   }
 
   &__content {
@@ -19,9 +19,11 @@
     flex-direction: column;
     flex-basis: 462px;
   }
+  &__decor {
+    margin-right: 62px;
+  }
 
   &__subtitle {
-    margin: 0;
     margin-bottom: 24px;
     font-weight: 700;
     font-size: 22px;
@@ -30,13 +32,11 @@
   }
 
   &__title {
-    margin: 0;
     margin-bottom: 30px;
     letter-spacing: -0.5px;
   }
 
   &__top-text {
-    margin: 0;
     margin-bottom: 39px;
     font-size: 24px;
     line-height: 34px;
@@ -50,13 +50,11 @@
     max-width: 150px;
   }
 
-  &__img {
-    margin-bottom: 15px;
-  }
-
   &__img-capture {
     text-align: center;
     color: $text-color-secondary;
+    font-size: 14px;
+    line-height: 22px;
   }
 
   &__bottom {
@@ -68,6 +66,10 @@
     &:not(:last-child) {
       margin-right: 30px;
     }
+  }
+  &__item-text {
+    margin-bottom: 5px;
+    line-height: 26px;
   }
 
   &__item-link {
