--- a/styles/hiring.scss
+++ b/styles/hiring.scss
@@ -16,13 +16,12 @@
   }
 
   &__title {
-    margin: 0;
     margin-bottom: 20px;
   }
 
   &__about-text {
-    margin: 0;
-    margin-bottom: 28px;
+    margin-bottom: 38px;
+    padding-top: 3px;
     font-size: 24px;
     line-height: 34px;
   }
@@ -69,7 +68,7 @@
     transition: all 0.2s;
 
     &:not(:last-child) {
-      margin-bottom: 20px;
+      margin-bottom: 17px;
     }
     &:hover {
       background-color: $bc-color-accent;
@@ -81,6 +80,11 @@
         color: #fff;
       }
     }
+  }
+
+  &__title {
+    font-size: 22px;
+    line-height: 28px;
   }
 
   &__text {
