--- a/styles/inbox.scss
+++ b/styles/inbox.scss
@@ -1,8 +1,8 @@
 @import 'variables';
 .inbox {
   background-color: $bc-color-beige;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 113px;
+  padding-bottom: 84px;
 
   &__inner {
     display: flex;
@@ -11,14 +11,16 @@
     max-width: 100%;
     flex-basis: 425px;
     flex-grow: 1;
-    margin-right: 161px;
+    margin-right: 163px;
   }
   &__img-decor {
-    margin-bottom: 15px;
+    margin-bottom: 18px;
   }
 
   &__img-caption {
-    text-align: right;
+    text-align: center;
+    font-size: 14px;
+    line-height: 22px;
   }
 
   &__content {
@@ -27,7 +29,6 @@
   }
 
   &__subtitle {
-    margin: 0;
     margin-bottom: 24px;
     padding-left: 30px;
     padding-right: 30px;
@@ -38,7 +39,6 @@
   }
 
   &__title {
-    margin: 0;
     margin-bottom: 30px;
     padding-left: 30px;
     padding-right: 30px;
@@ -55,7 +55,7 @@
 
   &__card {
     background-color: $bc-color-white;
-    padding: 30px;
+    padding: 29px;
   }
 }
 .blockquote {
