--- a/styles.css
+++ b/styles.css
@@ -102,54 +102,193 @@ button {
 
 .header {
   line-height: 25px;
-  padding-top: 39px;
-  background-color: #f3c6bd;
+  padding-top: 0;
+  background-color: #fff;
+}
+@media screen and (min-width: 400px) {
+  .header {
+    padding-top: 39px;
+    background-color: #f3c6bd;
+  }
 }
 .header__top {
   display: flex;
+  justify-content: space-between;
   height: 62px;
+}
+.header__active-button {
+  display: none;
+}
+@media screen and (min-width: 400px) {
+  .header__active-button {
+    display: block;
+  }
 }
 
 .logo {
   display: flex;
   align-items: center;
 }
+.logo__link {
+  display: flex;
+}
 .logo__img {
-  width: 66px;
-  height: 60px;
+  width: 48px;
+  height: 48px;
   margin-right: 9px;
+}
+@media screen and (min-width: 400px) {
+  .logo__img {
+    width: 66px;
+    height: 60px;
+  }
 }
 .logo__name {
   font-size: 20px;
   font-weight: 700;
 }
 .logo__description {
+  display: none;
   color: rgba(43, 41, 45, 0.6);
+}
+@media screen and (min-width: 400px) {
+  .logo__description {
+    display: block;
+  }
 }
 
 .navigation {
-  margin-left: auto;
-  margin-right: 57px;
+  position: absolute;
+  left: -10px;
+  right: -10px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  background-color: rgba(243, 198, 189, 0.9333333333);
+  transform: translateY(-200px);
+  transition: all 0.6s;
+}
+@media screen and (min-width: 400px) {
+  .navigation {
+    position: static;
+    display: flex;
+    flex-direction: row;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-right: 57px;
+    margin-left: auto;
+    transform: translateY(0);
+    transition: all 0s;
+  }
+}
+.navigation_active {
+  transform: translateY(0);
+  transition: all 0.6s;
 }
 .navigation__item {
-  display: inline-block;
-  margin-top: 7px;
-  text-decoration: none;
+  display: block;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  padding-right: 50px;
+  padding-left: 50px;
+  width: 100%;
+  text-align: center;
+}
+@media screen and (min-width: 400px) {
+  .navigation__item {
+    padding-bottom: 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-left: 0;
+    width: auto;
+    display: inline-block;
+    margin-top: 7px;
+    text-decoration: none;
+  }
+}
+.navigation__item:not(:last-child) {
+  margin-right: 48px;
 }
 .navigation__item_selected {
   font-weight: 700;
 }
-.navigation__item:not(:last-child) {
-  margin-right: 42px;
-}
 .navigation__arrow {
-  display: inline-block;
+  display: none;
   margin-left: 11px;
   padding-bottom: 2px;
   background-image: url("https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/arrow.png");
   background-repeat: no-repeat;
   width: 8px;
   height: 5px;
+}
+@media screen and (min-width: 400px) {
+  .navigation__arrow {
+    display: inline-block;
+  }
+}
+
+.sandvich-menu {
+  display: flex;
+  width: 58px;
+  height: 62px;
+  border-left: 1px solid rgba(43, 41, 45, 0.231372549);
+}
+@media screen and (min-width: 400px) {
+  .sandvich-menu {
+    display: none;
+  }
+}
+
+.menu-btn {
+  margin: auto;
+  width: 18px;
+  height: 13px;
+  background-color: transparent;
+  position: relative;
+}
+.menu-btn__string {
+  position: relative;
+  top: 0px;
+  right: 0;
+  display: block;
+  width: 18px;
+  height: 2px;
+  background-color: rgba(44, 50, 65, 0.6431372549);
+}
+.menu-btn__string::before {
+  content: "";
+  position: absolute;
+  top: 4px;
+  right: 0;
+  width: 18px;
+  height: 2px;
+  background-color: rgba(44, 50, 65, 0.6431372549);
+  transition: all 0.3s;
+}
+.menu-btn__string::after {
+  content: "";
+  position: absolute;
+  bottom: 4px;
+  right: 0;
+  width: 18px;
+  height: 2px;
+  background-color: rgba(44, 50, 65, 0.6431372549);
+}
+.menu-btn__string_active {
+  background-color: transparent;
+  transition: all 0.3s;
+}
+.menu-btn__string_active::before {
+  top: 0;
+  transform: rotate(45deg);
+  background-color: #3141c5;
+}
+.menu-btn__string_active::after {
+  bottom: 0;
+  transform: rotate(-45deg);
+  background-color: #3141c5;
 }
 
 .content {
