--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -17,6 +17,14 @@ $bc-color-white: #fff;
 $bc-color-grey: #f4f5f7;
 
 $border-color: #2b292d3b;
+$burger-btn-color: #2c3241a4;
+$sm: 400px;
+
+@mixin for-large-up {
+  @media screen and (min-width: 400px) {
+    @content;
+  }
+}
 
 $maxWidth: 1400;
 @mixin adaptiv-font($pcSize, $mobSize) {
