--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -6,42 +6,76 @@
 }
 .headline {
   &__wrapper {
-    padding-top: 77px;
-    padding-bottom: 77px;
+    padding-top: 36px;
+    padding-bottom: 36px;
+    @include for-large-up {
+      padding-top: 77px;
+      padding-bottom: 77px;
+    }
   }
 
   &__content {
-    position: absolute;
-    max-width: 754px;
+    max-width: 100%;
     z-index: 1;
+    @include for-large-up {
+      position: absolute;
+      max-width: 754px;
+      z-index: 1;
+    }
   }
 
   &__title {
-    margin-top: -2px;
-    width: 754px;
-    height: 165px;
-    letter-spacing: -1px;
-    margin-bottom: 33px;
+    width: auto;
+    margin-bottom: 24px;
+    @include for-large-up {
+      margin-top: -2px;
+      margin-bottom: 33px;
+      width: 754px;
+      height: 165px;
+      letter-spacing: -0.5px;
+    }
   }
 
   &__description {
-    width: 464px;
-    height: 102px;
     font-size: 24px;
-    line-height: 34px;
-    margin-bottom: 60px;
+    line-height: 36px;
+    margin-bottom: 30px;
+    @include for-large-up {
+      line-height: 34px;
+      height: 102px;
+      width: 464px;
+      margin-bottom: 60px;
+    }
   }
 
-  &__active-button {
+  .headline__active-button {
     margin-right: 4px;
+    width: 100%;
+    margin-bottom: 15px;
+    @include for-large-up {
+      width: 160px;
+      margin-bottom: 0;
+    }
+  }
+
+  &__learn-more-button {
+    text-align: center;
+    width: 100%;
+    margin-bottom: 33px;
+    @include for-large-up {
+      width: auto;
+      margin-bottom: 0;
+    }
   }
 
   &__banner {
     display: block;
-    position: relative;
-    top: 7px;
-    right: -105px;
-    margin-left: auto;
     max-width: 100%;
+    @include for-large-up {
+      position: relative;
+      top: 7px;
+      right: -105px;
+      margin-left: auto;
+    }
   }
 }
