--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,13 @@ button {
   background-color: #fff;
   padding: 0 10px;
 }
+.header__top_fix {
+  position: fixed;
+  background-color: #fff;
+  z-index: 10;
+  width: 100%;
+  max-width: 1200px;
+}
 @media screen and (min-width: 540px) {
   .header__top {
     background-color: #f3c6bd;
@@ -177,7 +184,7 @@ button {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding-top: 25px;
+  padding-top: 40px;
   padding-bottom: 25px;
   background-color: rgba(243, 198, 189, 0.9333333333);
   z-index: 2;
@@ -302,12 +309,12 @@ button {
 .menu-btn__string_active::before {
   top: 0;
   transform: rotate(45deg);
-  background-color: #3141c5;
+  background-color: #ed526d;
 }
 .menu-btn__string_active::after {
   bottom: 0;
   transform: rotate(-45deg);
-  background-color: #3141c5;
+  background-color: #ed526d;
 }
 
 .content {
@@ -315,24 +322,45 @@ button {
 }
 
 .about {
-  padding-top: 77px;
-  padding-bottom: 76px;
+  padding-top: calc(
+    46px + 31 * ((100vw - 320px) / 1080)
+  );
+  padding-bottom: calc(
+    46px + 30 * ((100vw - 320px) / 1080)
+  );
   background-color: #f4f5f7;
 }
 .about__wrapper {
   display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 540px) {
+  .about__wrapper {
+    flex-direction: row;
+  }
 }
 .about__title {
   margin-bottom: 11px;
   font-size: 22px;
 }
 .about__article {
-  flex-basis: 555px;
+  flex-basis: auto;
   font-size: 22px;
   line-height: 32px;
 }
+@media screen and (min-width: 540px) {
+  .about__article {
+    flex-basis: 555px;
+  }
+}
 .about__article:not(:last-child) {
-  margin-right: 29px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 540px) {
+  .about__article:not(:last-child) {
+    margin-right: 29px;
+    margin-bottom: 0;
+  }
 }
 
 .active-button {
@@ -1194,8 +1222,13 @@ body {
 
 .container {
   max-width: 1160px;
-  padding: 0 10px;
+  padding: 0 15px;
   margin: 0 auto;
+}
+@media screen and (min-width: 540px) {
+  .container {
+    padding: 0 10px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
