--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,9 +1,13 @@
 .about {
-  padding-top: 77px;
-  padding-bottom: 76px;
+  @include adaptiv-padding-top(77, 46);
+  @include adaptiv-padding-bottom(76, 46);
   background-color: #f4f5f7;
   &__wrapper {
     display: flex;
+    flex-direction: column;
+    @include for-large-up {
+      flex-direction: row;
+    }
   }
   &__title {
     margin-bottom: 11px;
@@ -11,12 +15,19 @@
   }
 
   &__article {
-    flex-basis: 555px;
+    flex-basis: auto;
     font-size: 22px;
     line-height: 32px;
+    @include for-large-up {
+      flex-basis: 555px;
+    }
 
     &:not(:last-child) {
-      margin-right: 29px;
+      margin-bottom: 20px;
+      @include for-large-up {
+        margin-right: 29px;
+        margin-bottom: 0;
+      }
     }
   }
 }
