--- a/styles/header.scss
+++ b/styles/header.scss
@@ -17,6 +17,13 @@
     width: 100%;
     background-color: #fff;
     padding: 0 10px;
+    &_fix {
+      position: fixed;
+      background-color: $bc-color-white;
+      z-index: 10;
+      width: 100%;
+      max-width: 1200px;
+    }
     @include for-large-up {
       background-color: #f3c6bd;
       max-width: 1160px;
@@ -70,7 +77,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding-top: 25px;
+  padding-top: 40px;
   padding-bottom: 25px;
   background-color: #f3c6bdee;
   z-index: 2;
@@ -82,7 +89,6 @@
     flex-direction: row;
     padding-top: 0;
     padding-bottom: 0;
-    // margin-right: 57px;
     @include adaptiv-margin-right(57, 10);
     margin-left: auto;
     transform: translateY(0);
@@ -113,7 +119,6 @@
     }
 
     &:not(:last-child) {
-      // margin-right: 48px;
       @include adaptiv-margin-right(47, 10);
     }
 
@@ -186,13 +191,13 @@
       &::before {
         top: 0;
         transform: rotate(45deg);
-        background-color: $bc-color-accent;
+        background-color: $burger-btn-color-active;
       }
 
       &::after {
         bottom: 0;
         transform: rotate(-45deg);
-        background-color: $bc-color-accent;
+        background-color: $burger-btn-color-active;
       }
     }
   }
