--- a/styles/index.scss
+++ b/styles/index.scss
@@ -27,6 +27,10 @@ body {
 
 .container {
   max-width: 1160px;
-  padding: 0 10px;
+  padding: 0 15px;
   margin: 0 auto;
+
+  @include for-large-up {
+    padding: 0 10px;
+  }
 }
