--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -19,6 +19,7 @@ $bc-color-pink: #f3c6bd;
 
 $border-color: #2b292d3b;
 $burger-btn-color: #2c3241a4;
+$burger-btn-color-active: $text-color-active-learbtn;
 $sm: 400px;
 
 @mixin for-large-up {
@@ -36,11 +37,30 @@ $maxWidth: 1400;
     #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
   );
 }
+
 @mixin adaptiv-margin-right($pcSize, $mobSize) {
   $addSize: $pcSize - $mobSize;
   $maxWidth: $maxWidth - 320;
 
   margin-right: calc(
+    #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
+  );
+}
+
+@mixin adaptiv-padding-top($pcSize, $mobSize) {
+  $addSize: $pcSize - $mobSize;
+  $maxWidth: $maxWidth - 320;
+
+  padding-top: calc(
+    #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
+  );
+}
+
+@mixin adaptiv-padding-bottom($pcSize, $mobSize) {
+  $addSize: $pcSize - $mobSize;
+  $maxWidth: $maxWidth - 320;
+
+  padding-bottom: calc(
     #{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth})
   );
 }
