--- a/styles/header.scss
+++ b/styles/header.scss
@@ -17,17 +17,23 @@
     width: 100%;
     background-color: #fff;
     padding: 0 10px;
-    &_fix {
-      position: fixed;
-      background-color: $bc-color-white;
-      z-index: 10;
-      width: 100%;
-      max-width: 1200px;
-    }
+
     @include for-large-up {
       background-color: #f3c6bd;
       max-width: 1160px;
       margin: 0 auto;
+    }
+
+    &_fix {
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      align-items: center;
+      width: 100%;
+      // max-width: 1160px;
+      background-color: $bc-color-pink;
+      z-index: 10;
     }
   }
 
@@ -97,6 +103,7 @@
   &_active {
     transform: translateY(0);
     transition: all 0.6s;
+    top: 0;
   }
 
   &__item {
